--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                     <h4>12</h4>
                 </div>
                 <div class="medium-3 columns">
-                    <h5>Avg. nr. of words</h5>
-                    <h4>12</h4>
+                    <h5>Avg. nr. of sentences</h5>
+                    <h4>3</h4>
                 </div>
             </div>
         </div>
         <div class="row" style="background:#fafafa;">
             <div class="medium-12 columns">
                 <div class="small-4 medium-6 columns">
-                    <h5>Nr. of words per tweet</h5>
+                    <h5>Avg. nr. of words / sentence</h5>
                     <h4>12.3</h4>
                 </div>
                 <div class="small-8 medium-6 columns">
