Added functions to display analysis .
Added findWordFrequency(), avgNrOfSentences(), avgNrOfWords(),
avgNrOfWordsPerSentence() and addStatisticsToSite().

--- a/index.html
+++ b/index.html
@@ -36,29 +36,25 @@
         </div>
         <div class="row" style="background:#ededed;">
             <div class="medium-12 columns">
-                <div class="medium-3 columns">
+                <div id="nrOfTweets" class="medium-3 columns">
                     <h5>Nr. of tweets</h5>
-                    <h4>1000</h4>
                 </div>
-                <div class="medium-3 columns">
+                <div id="newest-tweet" class="medium-3 columns">
                     <h5>Newest tweet</h5>
                     <h4>03:24 17. feb 2017</h4>
                 </div>
-                <div class="medium-3 columns">
+                <div id="avgNrOfWords" class="medium-3 columns">
                     <h5>Avg. nr. of words</h5>
-                    <h4>12</h4>
                 </div>
-                <div class="medium-3 columns">
+                <div id="avgNrOfSentences" class="medium-3 columns">
                     <h5>Avg. nr. of sentences</h5>
-                    <h4>3</h4>
                 </div>
             </div>
         </div>
         <div class="row" style="background:#fafafa;">
             <div class="medium-12 columns">
-                <div class="small-4 medium-6 columns">
+                <div id="avgNrOfWordsPerSentence" class="small-4 medium-6 columns">
                     <h5>Avg. nr. of words / sentence</h5>
-                    <h4>12.3</h4>
                 </div>
                 <div class="small-8 medium-6 columns">
                     <h5>Most used words</h5>
