Make public folder and organise scripts and data

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
 		<script language="javascript" type="text/javascript" src="libraries/rita-full.js"></script>
         <script language="javascript" type="text/javascript" src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
         <!-- Javascript -->
-        <script language="javascript" type="text/javascript"  src="trumpalyse.js"></script>
-        <script language="javascript" type="text/javascript"  src="sentence.js"></script>
-        <script language="javascript" type="text/javascript"  src="tweet.js"></script>
-        <script language="javascript" type="text/javascript"  src="word.js"></script>
-        <script language="javascript" type="text/javascript"  src="firebase.js"></script>
+        <script language="javascript" type="text/javascript"  src="scripts/trumpalyse.js"></script>
+        <script language="javascript" type="text/javascript"  src="scripts/sentence.js"></script>
+        <script language="javascript" type="text/javascript"  src="scripts/tweet.js"></script>
+        <script language="javascript" type="text/javascript"  src="scripts/word.js"></script>
+        <script language="javascript" type="text/javascript"  src="scripts/firebase.js"></script>
         <!-- CSS -->
         <link rel="stylesheet" href="css/foundation.css">
         <link rel="stylesheet" href="css/app.css">
