Moved nrOfTweets and created trump-111.json

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="top-row" class="row">
-            <div class="small-12 columns">
+            <div id="intro" class="small-12 columns">
                 <h1>Trumpalyse</h1>
-                <h3>A lighthearted look at the tweets of President Trump</h3>
+                
             </div>
         </div>
         <div class="row" style="background:#ededed;">
